INTYG-5717: Visa mer länkar i FMB fliken har nu vettiga idn för testning

--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/wcSupportPanelManager/wcFmbPanelTab/wcFmbPanelTab.directive.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/wcSupportPanelManager/wcFmbPanelTab/wcFmbPanelTab.directive.html
@@ -34,7 +34,7 @@
         </h4>
 
         <section ng-attr-id="fmb_text_{{::section.heading}}" ng-if="section.data.text">
-          <wc-expandable-content content="section.data.text" threshold-pixel-height="80px">
+          <wc-expandable-content content="section.data.text" threshold-pixel-height="80px" link-dom-id="fmb-text-expandable-content-link-{{::section.heading}}">
 
           </wc-expandable-content>
         </section>
