--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/headers/wcAppHeader/wcHeaderUser/vardperson-sekretess.infodialog.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/headers/wcAppHeader/wcHeaderUser/vardperson-sekretess.infodialog.html
@@ -1,16 +1,17 @@
 <div class="modal-header">
-  <button type="button" class="close" ng-click="$dismiss()">×</button>
-  <h3>Du har en sekretessmarkering. Var uppmärksam på vad det innebär vid användning av Webcert:</h3>
+  <button type="button" class="close" data-ng-click="$dismiss()"><i class="material-icons">close</i></button>
+  <h3>Du har en sekretessmarkering.</h3>
 </div>
 
 <div class="modal-body">
+  <p>Att använda Webcert med en sekretessmarkering innebär:</p>
   <ul>
-  <li>När du signerar ett intyg kommer ditt namn och information om den vårdgivare och vårdenhet intyget är utfärdat på, vara synligt.</li>
-  <li>Vid kommunikation med Försäkringskassan kring ett intyg, kommer ditt namn att vara synligt.</li>
+    <li ng-if="!isVardAdministrator">När du signerar ett intyg kommer ditt namn och information om den vårdgivare och vårdenhet intyget är utfärdat på att vara synligt.</li>
+    <li>Vid kommunikation med Försäkringskassan kring ett intyg kommer ditt namn att vara synligt.</li>
   </ul>
   <p>Detta kan göra att information om dig och var du arbetar kan spridas.</p>
 </div>
 
 <div class="modal-footer">
-  <button type="button" class="btn btn-primary" id="wc-vardperson-sekretess-info-dialog-confirmationOkButton" ng-click="$close()"><span dynamic-label key="common.ok"></span></button>
+  <button type="button" class="btn btn-default" id="wc-vardperson-sekretess-info-dialog-confirmationOkButton" ng-click="$close()">Stäng</button>
 </div>
