INTYG-5514: Add observandum text and styling

--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/css/_variables.scss
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/css/_variables.scss
@@ -48,7 +48,7 @@ $wc-color-29: #99E5D2;
 $wc-color-05: #765A20;
 $wc-color-12: #F6BB42;
 $wc-color-18: #FFC794;
-$wc-color-02: #ffebba;
+$wc-color-02: #FFEBBA;
 
 $wc-color-19: #292F4F;
 $wc-color-17: #3D4260;
