--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/intyg/intygSend.dialog.scss
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/intyg/intygSend.dialog.scss
@@ -1,7 +1,17 @@
 .intyg-send {
 
 
-  .modal-body {
+ /* .modal-body {
     margin-bottom: 42px;
+  }*/
+  .lisjp-observandum {
+    display: flex;
+    flex-direction: row;
+    background-color: $wc-color-02;
+    padding: 3px;
+
+  }
+  .lisjp-observandum-text {
+    padding: 2px;
   }
  }
