--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/wc-common.scss
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/wc-common.scss
@@ -73,6 +73,7 @@
   @import 'components/wcSpinner/wcSpinner.scss';
   @import 'components/wcSupportPanelManager/wcArendePanelTab/_arende.scss';
   @import 'components/wcSupportPanelManager/wcArendePanelTab/komplettera/komplettering-modal-dialog.scss';
+  @import 'components/wcSupportPanelManager/wcArendePanelTab/new/arendeNew.directive.scss';
   @import 'components/wcSupportPanelManager/wcArendePanelTab/panel/fraga/arendePanelFraga.directive.scss';
   @import 'components/wcSupportPanelManager/wcArendePanelTab/wcArendePanelTab.directive.scss';
   @import 'components/wcSupportPanelManager/wcFmbPanelTab/wcFmbPanelTab.directive.scss';
