--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/wcSupportPanelManager/wcArendePanelTab/arendeList.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/wcSupportPanelManager/wcArendePanelTab/arendeList.html
@@ -6,7 +6,7 @@
       <div class="webcert-bottom-padding-section" ng-show="viewState.intygProperties.isLoaded">
 
         <!-- new arende form -->
-        <div ng-show="viewState.doneLoading && viewState.activeErrorMessageKey == null" arende-new arende-list="arendeList" parent-view-state="viewState"></div>
+        <arende-new ng-show="viewState.doneLoading && viewState.activeErrorMessageKey == null"  arende-list="arendeList" parent-view-state="viewState"></arende-new>
 
         <!-- error message -->
         <wc-alert-message id="arende-list-load-error" ng-show="viewState.doneLoading && viewState.activeErrorMessageKey"
