--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/wcSupportPanelManager/wcArendePanelTab/new/arendeNew.directive.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/wcSupportPanelManager/wcArendePanelTab/new/arendeNew.directive.html
@@ -1,82 +1,58 @@
-<div>
+<div class="card">
 
-  <!-- Arende button -->
-  <div class="form-group"
-       ng-show="getNewArendeState() == 'new' && draftLoaded"
+  <div ng-show="showCreateArende()"
        wc-check-vardenhet
        wc-authority feature="SKAPA_NY_FRAGA" intygstyp="{{localViewState.parentViewState.intygProperties.type}}"
        vardenhet="{{localViewState.parentViewState.intyg.grundData.skapadAv.vardenhet.enhetsid}}">
-      <button type="button" class="btn btn-primary" ng-click="toggleArendeForm()" id="askArendeBtn">Ny fråga till
-        Försäkringskassan
-      </button>
-  </div>
-  <div ng-if="getNewArendeState() == 'not-sent'"
-       wc-check-vardenhet
-       vardenhet="{{localViewState.parentViewState.intyg.grundData.skapadAv.vardenhet.enhetsid}}"
-       id="intyg-is-not-sent-to-fk-message-text">
-    <strong>Intyget är inte skickat till Försäkringskassan.</strong><br> Det går därför inte att ställa frågor om
-    intyget.
-  </div>
-  <div ng-if="getNewArendeState() == 'no-arenden'"
-       wc-check-vardenhet
-       vardenhet="{{localViewState.parentViewState.intyg.grundData.skapadAv.vardenhet.enhetsid}}"
-       id="intyg-is-not-available">
-    <strong>Det finns inga frågor och svar.</strong>
-  </div>
 
-  <!-- New question form -->
-  <div ng-show="localViewState.arendeNewOpen && draftLoaded" arende-draft-auto-save intyg-id="localViewState.parentViewState.intyg.id" amne="arendeNewModel.chosenTopic.value" text="arendeNewModel.frageText" save-state="arendeNewModel.saveState">
-    <div class="form-group">
-      Här kan du föra en dialog med Försäkringskassan om ett intyg. Medicinsk information ska endast skickas via signerade intyg.
-    </div>
-    <div class="form-group" id="arendeNewModelForm">
-      <label class="control-label">Ämne</label>
-      <div class="controls">
-        <select id="new-question-topic" class="form-control" ng-model="arendeNewModel.chosenTopic"
-                ng-options="c.label for c in arendeNewModel.topics track by c.value"></select>
+    <!-- New question form -->
+    <div  arende-draft-auto-save intyg-id="localViewState.parentViewState.intyg.id" amne="arendeNewModel.chosenTopic" text="arendeNewModel.frageText" save-state="arendeNewModel.saveState">
+      <div class="arende-new-heading">
+        Här kan du ställa en ny fråga till Försäkringskassan.
+      </div>
+      <div class="form-group" id="arendeNewModelForm">
+        <wc-dropdown id="new-question-topic" ng-model="arendeNewModel.chosenTopic" items="arendeNewModel.topics" use-dynamic-label="false"></wc-dropdown>
+      </div>
+      <div class="form-group">
+        <textarea ng-trim="false" maxlength="2000" rows="13" class="form-control"
+                ng-model="arendeNewModel.frageText" wc-focus-me="localViewState.focusArende"
+                id="arendeNewModelText"></textarea>
+      </div>
+
+      <!-- error message occuring when inteacting with server for this FragaSvar-->
+      <wc-alert-message id="arendeNewModel-load-error" ng-show="localViewState.activeErrorMessageKey" alert-severity="danger">
+        <span dynamic-label key="common.error.{{localViewState.activeErrorMessageKey}}"></span>
+      </wc-alert-message>
+
+      <!-- Form button group -->
+      <div class="form-group">
+
+        <!-- Skicka -->
+        <button type="button" class="btn btn-success" ng-click="sendNewArende()"
+                ng-disabled="!isArendeValidForSubmit()"
+                id="sendArendeBtn">
+          <img src="/img/loader-small-green.gif" ng-show="localViewState.updateInProgress"> Skicka
+        </button>
+
+        <!-- Avbryt -->
+        <button type="button" class="btn btn-default" ng-click="cancelQuestion()"
+                ng-disabled="!isArendeValidForSubmit()"
+                id="cancelArendeBtn">Avbryt</button>
+
+        <!-- Status -->
+        <span class="arende-draft-status pull-right" ng-switch="arendeNewModel.saveState">
+          <span ng-switch-when="saving" id="arende-draft-saving" dynamic-label key="common.arende.draft.saving"></span>
+          <span ng-switch-when="saved" id="arende-draft-saved" dynamic-label key="common.arende.draft.saved"></span>
+          <span ng-switch-when="failed">
+            <wc-alert-message id="arende-draft-error"
+                              alert-severity="danger"
+                              alert-message-id="common.arende.draft.failed"></wc-alert-message>
+          </span>
+        </span>
       </div>
     </div>
-    <div class="form-group">
-      <label class="control-label">Fråga</label>
-      <textarea wc-maxlength ng-trim="false" maxlength="2000" rows="13" class="form-control"
-              ng-model="arendeNewModel.frageText" wc-focus-me="localViewState.focusArende"
-              id="arendeNewModelText"></textarea>
-      <!--<span class="counter" style="float: right;" dynamic-label key="common.arende.draft.{{arendeNewModel.saveState}}"></span>-->
-      <span class="counter pull-right" ng-switch="arendeNewModel.saveState">
-          <span ng-switch-when="saved" class="success" dynamic-label key="common.arende.draft.saved"></span>
-          <span ng-switch-when="failed" class="error" dynamic-label key="common.arende.draft.failed"></span>
-      </span>
-    </div>
+    <!--  Arende formular end -->
 
-    <!-- error message occuring when inteacting with server for this FragaSvar-->
-    <wc-alert-message id="arendeNewModel-load-error" ng-show="localViewState.activeErrorMessageKey" alert-severity="danger">
-      <span dynamic-label key="common.error.{{localViewState.activeErrorMessageKey}}"></span>
-    </wc-alert-message>
-
-    <!-- Form button group -->
-    <div class="form-group">
-
-      <!-- Skicka -->
-      <button type="button" class="btn btn-primary" ng-click="sendNewArende()"
-              ng-disabled="!isArendeValidForSubmit()" title="{{localViewState.sendButtonToolTip}}"
-              id="sendArendeBtn">
-        <img src="/img/loader-small-green.gif" ng-show="localViewState.updateInProgress"> Skicka till
-        Försäkringskassan
-      </button>
-
-      <!-- Avbryt -->
-      <button type="button" class="btn btn-secondary" ng-click="cancelQuestion()" id="cancelArendeBtn">Avbryt
-        fråga
-      </button>
-    </div>
-  </div>
-  <!--  Arende formular end -->
-
-  <!-- question sent message -->
-  <div ng-if="localViewState.showSentMessage">
-    <div uib-alert type="info" close="dismissSentMessage()" id="arende-is-sent-to-fk-message-text">
-      <strong>Frågan är skickad till Försäkringskassan</strong><br><span wc-authority="HANTERA_MAILSVAR"> Vårdenheten kontaktas via mejl när svar har inkommit.</span>
-    </div>
   </div>
 
 </div>
