--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/wcSupportPanelManager/wcArendePanelTab/wcArendePanelTab.directive.scss
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/wcSupportPanelManager/wcArendePanelTab/wcArendePanelTab.directive.scss
@@ -3,6 +3,16 @@ wc-arende-panel-tab {
   flex-direction: column;
   flex: 1;
   min-height: 1%; //without a min-height IE11/edge wont shrink flex-items
+  background-color: $wc-color-28;
+
+  wc-support-panel-scrollable-body .tab-content-scrollable-body {
+    padding: 0;
+    .card {
+      padding: 28px 20px;
+      border-radius: 0;
+      box-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.24);
+    }
+  }
 
   .navbar-nav {
     > li > a {
