INTYG-5701: Lagt till wc-deprecated-intygstype-message direktiv i utkast-header, intygs-header samt ärende-högerflik. Om modulen har moduleentrypoint-propertyn deprecated=true, visas en info-alertmessage med texter där.

--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/wcSupportPanelManager/wcArendePanelTab/wcArendePanelTab.directive.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/wcSupportPanelManager/wcArendePanelTab/wcArendePanelTab.directive.html
@@ -52,7 +52,9 @@
   <!-- signerat mode (taken from META-INF/resources/webjars/common/webcert/fk/arenden/arendeList.html)-->
 
   <div class="row" ng-if="config.intygContext.isSigned">
+
     <div class="col-md-12 arende-column">
+      <wc-deprecated-intygstype-message message-suffix="arendeheader" intygs-type="{{::viewState.intygProperties.type}}"></wc-deprecated-intygstype-message>
 
       <div wc-spinner label="common.loading.existing.arenden" show-spinner="!viewState.doneLoading"
            show-content="viewState.doneLoading">
