--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/wc-common.scss
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/wc-common.scss
@@ -56,6 +56,7 @@
   @import 'components/wcBottomFadeout/wcBottomFadeout.directive.scss';
   @import 'components/wcButton/wcButton.directive.scss';
   @import 'components/wcCheckboxWrapper/wcCheckboxWrapper.directive.scss';
+  @import 'components/wcDeprecatedIntygstypeMessage/wcDeprecatedIntygstypeMessage.directive.scss';
   @import 'components/wcDropdown/wcDropdown.directive.scss';
   @import 'components/wcExpandableContent/wcExpandableContent.directive.scss';
   @import 'components/wcFragaKomplettering/wcFragaKomplettering.directive.scss';
