INTYG-5694: Lagt in ikon på signeringsknappen

--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/utkast-footer/utkastFooter.scss
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/utkast-footer/utkastFooter.scss
@@ -7,4 +7,9 @@
     justify-content: space-between;
     align-items: center;
   }
+
+  .icon-wc-ikon-30:before {
+    margin-left: 0;
+    vertical-align: middle;
+  } 
 }
