--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/wcSupportPanelManager/wcArendePanelTab/wcArendePanelTab.directive.scss
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/wcSupportPanelManager/wcArendePanelTab/wcArendePanelTab.directive.scss
@@ -58,4 +58,10 @@ wc-arende-panel-tab {
       }
     }
   }
+
+  .tab-footer {
+    background-color: $wc-color-15;
+    color: $wc-color-00;
+    padding: 12px 14px;
+  }
 }
