--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/wcSupportPanelManager/wcArendePanelTab/komplettera/arendePanelSvarKompletteringsatgard.directive.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/wcSupportPanelManager/wcArendePanelTab/komplettera/arendePanelSvarKompletteringsatgard.directive.html
@@ -1,6 +1,3 @@
-<span>
-  <button class="btn btn-primary" ng-if="!redirectToExistingUtkast && !arendeSvar.svaraMedNyttIntygDisabled" id="komplettera-intyg-{{arendeSvar.fragaInternReferens}}" ng-click="kompletteraIntyg()">Komplettera intyg</button>
-  <button class="btn btn-primary" ng-if="redirectToExistingUtkast && !arendeSvar.svaraMedNyttIntygDisabled" id="komplettera-open-utkast-{{arendeSvar.fragaInternReferens}}" ng-click="openKompletteringsUtkast()">Fortsätt på intygsutkast</button>
-  <button class="btn btn-default" ng-if="!redirectToExistingUtkast && !arendeSvar.svaraMedNyttIntygDisabled" id="kan-inte-komplettera-{{arendeSvar.fragaInternReferens}}" ng-click="openKompletteringDialog()">Kan inte komplettera</button>
-  <button class="btn btn-primary" ng-if="arendeSvar.svaraMedNyttIntygDisabled" id="uthopp-svara-med-meddelande-{{arendeSvar.fragaInternReferens}}" ng-click="openKompletteringDialog()">Svara</button>
-</span>
+<div>
+  <button class="btn btn-primary" id="uthopp-svara-med-meddelande-{{arendeSvar.fragaInternReferens}}" ng-click="openKompletteringDialog()">Svara</button> <!--ng-if="arendeSvar.svaraMedNyttIntygDisabled" -->
+</div>
