INTYG-5725: Kompletteringsvarning på card.

--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/wcSupportPanelManager/wcArendePanelTab/wcArendeKompletteraUtkastWarning/wcArendeKompletteraUtkastWarning.directive.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/wcSupportPanelManager/wcArendePanelTab/wcArendeKompletteraUtkastWarning/wcArendeKompletteraUtkastWarning.directive.html
@@ -1,4 +1,4 @@
-<div>
+<div class="card">
   <wc-alert-message
       alert-severity="warning"
       ng-if="showFortsattUtkastWarning()">Det finns redan en påbörjad komplettering. <a id="komplettera-open-utkast"
