--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/wcSupportPanelManager/wcArendePanelTab/panel/header/arendePanelHeader.directive.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/wcSupportPanelManager/wcArendePanelTab/panel/header/arendePanelHeader.directive.html
@@ -13,7 +13,7 @@
           Svara senast: <strong>{{arendeListItem.arende.fraga.sistaDatumForSvar}}</strong></h3>
       </div>
 
-      <div arende-hantera arende-list="arendeList" arende-list-item="arendeListItem" parent-view-state="parentViewState"></div>
+      <arende-hantera arende-list="arendeList" arende-list-item="arendeListItem" parent-view-state="parentViewState"></arende-hantera>
 
     </div>
   </div>
