--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/wc-common.scss
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/wc-common.scss
@@ -74,7 +74,9 @@
   @import 'components/wcSupportPanelManager/wcArendePanelTab/_arende.scss';
   @import 'components/wcSupportPanelManager/wcArendePanelTab/komplettera/komplettering-modal-dialog.scss';
   @import 'components/wcSupportPanelManager/wcArendePanelTab/new/arendeNew.directive.scss';
+  @import 'components/wcSupportPanelManager/wcArendePanelTab/panel/arendePanel.directive.scss';
   @import 'components/wcSupportPanelManager/wcArendePanelTab/panel/fraga/arendePanelFraga.directive.scss';
+  @import 'components/wcSupportPanelManager/wcArendePanelTab/panel/svar/arendePanelSvar.directive.scss';
   @import 'components/wcSupportPanelManager/wcArendePanelTab/wcArendeKompletteraUtkastWarning/wcArendeKompletteraUtkastWarning.scss';
   @import 'components/wcSupportPanelManager/wcArendePanelTab/wcArendePanelTab.directive.scss';
   @import 'components/wcSupportPanelManager/wcFmbPanelTab/wcFmbPanelTab.directive.scss';
