--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/wcSupportPanelManager/wcArendePanelTab/panel/arendePanel.directive.scss
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/wcSupportPanelManager/wcArendePanelTab/panel/arendePanel.directive.scss
@@ -1,4 +1,4 @@
-/*
+/*!
  * Copyright (C) 2018 Inera AB (http://www.inera.se)
  *
  * This file is part of sklintyg (https://github.com/sklintyg).
@@ -16,24 +16,9 @@
  * You should have received a copy of the GNU General Public License
  * along with this program.  If not, see <http://www.gnu.org/licenses/>.
  */
-/**
- * Created by BESA on 2015-03-05.
- */
 
-/**
- * arendePanelHeader directive. Component for header of a arende panel.
- */
-angular.module('common').directive('arendePanelHeader',
-    [function() {
-            'use strict';
-
-            return {
-                restrict: 'E',
-                templateUrl: '/web/webjars/common/webcert/components/wcSupportPanelManager/wcArendePanelTab/panel/header/arendePanelHeader.directive.html',
-                scope: {
-                    arendeList: '=',
-                    arendeListItem: '=',
-                    parentViewState: '='
-                }
-            };
-        }]);
+arende-panel {
+  h3 {
+    @extend %wc-typo-06;
+  }
+}
