--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/wcSupportPanelManager/wcArendePanelTab/panel/svar/arendePanelSvar.directive.scss
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/wcSupportPanelManager/wcArendePanelTab/panel/svar/arendePanelSvar.directive.scss
@@ -1,4 +1,4 @@
-/*
+/*!
  * Copyright (C) 2018 Inera AB (http://www.inera.se)
  *
  * This file is part of sklintyg (https://github.com/sklintyg).
@@ -16,24 +16,30 @@
  * You should have received a copy of the GNU General Public License
  * along with this program.  If not, see <http://www.gnu.org/licenses/>.
  */
-/**
- * Created by BESA on 2015-03-05.
- */
 
-/**
- * arendePanelHeader directive. Component for header of a arende panel.
- */
-angular.module('common').directive('arendePanelHeader',
-    [function() {
-            'use strict';
+arende-panel-svar {
+  display: block;
+  margin-bottom: 18px;
 
-            return {
-                restrict: 'E',
-                templateUrl: '/web/webjars/common/webcert/components/wcSupportPanelManager/wcArendePanelTab/panel/header/arendePanelHeader.directive.html',
-                scope: {
-                    arendeList: '=',
-                    arendeListItem: '=',
-                    parentViewState: '='
-                }
-            };
-        }]);
+  textarea.form-control {
+    height: 96px;
+  }
+
+  button.btn-success {
+    margin-right: 10px;
+  }
+
+  .arende-draft-status {
+    @extend %wc-typo-07;
+    color: $wc-color-07;
+
+    > span > i {
+      font-size: 14px;
+      color: $wc-color-10;
+    }
+
+    wc-alert-message .alert {
+      @extend %wc-typo-09;
+    }
+  }
+}
